<?xml version="1.0"?>
<package format="2">
  <name>mvp_localization_utilities</name>
  <version>0.0.0</version>
  <description>The mvp_localization_utilities package</description>

  <author email="emircem@uri.edu">Emir Cem Gezer</author>
  <maintainer email="emircem@uri.edu">Emir Cem Gezer</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>robot_localization</depend>
  <depend>roscpp</depend>
  <depend>mvp_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>imu_transformer</depend>
  <depend>geographic_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  

</package>
